--- a/administrador.html
+++ b/administrador.html
@@ -9,6 +9,7 @@
         <nav>
             <li><a href="./Bodegas.html">Lista Bodegas Administrar</a></li>
             <li><a href="./listaProductos.html">Lista Productos</a></li>
+            <li><a href="./listaProductos.html">Filtrar Productos</a></li>
         </nav>
 
 
