--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <body>
     <img src="./img/bodega.jpg" alt="Bodeguero" width="40%" height="50%">
     <p><h1>Bienvenido a Bodega Aqui Sipo</h1>
-        <h2>Porfavor ingrese al portal</h2>
+        <h2>Porfavor ingrese al portal
+            
+        </h2>
         <a href="./loginBodeguero.html" >Bodeguero</a><br>
         <a href="./loginAdministrador.html">Administrador</a>
     </p>
