cambios de html

--- a/loginBodeguero.html
+++ b/loginBodeguero.html
@@ -10,7 +10,8 @@
         <br> Usuario: <input type="text" > 
         <br>Contraseña: <input type="text">
         
-<br><button>Ingresar  </button>
+<br>
+<a href="./listaProductos.html"><button>Ingresar  </button></a>
 
     </div>
 </body>
