--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <img src="./img/bodega.jpg" alt="Bodeguero" width="40%" height="50%">
     <p><h1>Bienvenido a Bodega Aqui Sipo</h1>
         <h2>Porfavor ingrese al portal</h2>
-        <a href="./loginBodeguero.html" >Bodeguero</a><br>
-        <a href="./loginAdministrador.html">Administrador</a>
+        <a href="./loginBodeguero.html" >Iniciar sesión</a><br>
     </p>
     
 </body>
