--- a/listaProductos.html
+++ b/listaProductos.html
@@ -5,11 +5,42 @@
     <title>Lista Productos</title>
 </head>
 <body>
-    <br>Ver Lista de productos:
 
+<div>
 
+    <br> 
+    <h3>Seleccione la bodega que desea administrar:</h3>
+    <br>
+    <input type="radio" name="rdoOpcion" value=1> Opción 1<br>
+    <input type="radio" name="rdoOpcion" value=1> Opción 2<br>
+    <input type="radio" name="rdoOpcion" value=1> Opción 3<br>
+    <input type="radio" name="rdoOpcion" value=1> Opción 4<br>
 
+</div>
+<div>
 
+    <br> 
 
+    <h3>Lista de productos:</h3>
+
+    <br>
+
+    <p>SKU</p>
+    <input type="text">
+    <button>Filtrar</button>
+    <p>Fecha</p>
+    <input type="text">
+    <button>Filtrar</button>
+    <p>Stock</p>
+    <input type="text">
+    <button>Filtrar</button>
+    <br>
+    <br>
+    
+    <button>Modificar</button>
+    <button>Borrar</button>
+    <button>Buscar</button>
+    <button>Agregar</button>
+</div>
 </body>
 </html>
