correcion de contenido no deseado

--- a/loginBodeguero.html
+++ b/loginBodeguero.html
@@ -10,8 +10,9 @@
         <br> Usuario: <input type="text" > 
         <br>Contraseña: <input type="text">
         
-<br><button>Ingresar  </button>
+<br>
+<a href="./listaProductos.html"><button>Ingresar  </button></a>
 
     </div>
 </body>
-</html>ñ
+</html>
