--- a/Bodegas.html
+++ b/Bodegas.html
@@ -6,9 +6,9 @@
 </head>
 <body>
     <br>Seleccione la bodega que desea administrar: <br>
-    <input type="radio" name="rdoOpcion" value=1> Opción 1<br>
-    <input type="radio" name="rdoOpcion" value=1> Opción 2<br>
-    <input type="radio" name="rdoOpcion" value=1> Opción 3<br>
-    <input type="radio" name="rdoOpcion" value=1> Opción 4<br>
+    <input type="radio" name="rdoOpcion" value=1> Bodega 1<br>
+    <input type="radio" name="rdoOpcion" value=1> Bodega 2<br>
+    <input type="radio" name="rdoOpcion" value=1> Bodega 3<br>
+    <input type="radio" name="rdoOpcion" value=1> Bodega 4<br>
 </body>
 </html>
