--- a/listaProductos.html
+++ b/listaProductos.html
@@ -11,10 +11,10 @@
     <br> 
     <h3>Seleccione la bodega que desea administrar:</h3>
     <br>
-    <input type="radio" name="rdoOpcion" value=1> Opción 1<br>
-    <input type="radio" name="rdoOpcion" value=1> Opción 2<br>
-    <input type="radio" name="rdoOpcion" value=1> Opción 3<br>
-    <input type="radio" name="rdoOpcion" value=1> Opción 4<br>
+    <input type="radio" name="rdoOpcion" value=1> Bodega 1<br>
+    <input type="radio" name="rdoOpcion" value=1> Bodega 2<br>
+    <input type="radio" name="rdoOpcion" value=1> Bodega 3<br>
+    <input type="radio" name="rdoOpcion" value=1> Bodega 4<br>
 
 </div>
 <div>
