--- a/loginBodeguero.html
+++ b/loginBodeguero.html
@@ -7,8 +7,12 @@
 <body>
     <div>
         <h1>Login </h1>
+        <div class="col-12 col-md-4">
         <br> Usuario: <input type="text" > 
-        <br>Contraseña: <input type="text">
+        
+        <div class="col-12 col-md-1 offset-md-3">
+        <br>Contraseña: <input type="password"> 
+    </div>
         
 <br>
 <a href="./listaProductos.html"><button>Ingresar  </button></a>
