--- a/administrador.html
+++ b/administrador.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <div>
+        <h1>Interfaz Administrador</h1>
         <nav>
             <li><a href="./Bodegas.html">Lista Bodegas Administrar</a></li>
             <li><a href="./listaProductos.html">Lista Productos</a></li>
