--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <p><h1>Bienvenido a Bodega Aqui Sipo</h1>
 
         <h2>Por favor ingrese al portal</h2>
-        <a href="./loginBodeguero.html" >Iniciar sesión</a><br>
-=======
+        ============
+        <a href="./loginBodeguero.html"><h3>Iniciar Sesión</h3> </a><br>
+============
 
 
     </p>
