--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h2>Por favor ingrese al portal</h2>
         ============
         <a href="./loginBodeguero.html"><h3>Iniciar Sesión</h3> </a><br>
+        <a href="./registro.html"><h3>Registrarse</h3> </a><br>
 ============
 
 
