correcion ruta css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bodega Aqui Sipo</title>
-    <link rel="stylesheet" href="./BodegaAquiSipo.css">
+    <link rel="stylesheet" href="./css/BodegaAquiSipo.css">
 </head>
 <body>
     <img src="./img/bodega.jpg" alt="Bodeguero" width="40%" height="50%" >
