--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <img src="./img/bodega.jpg" alt="Bodeguero" width="40%" height="50%">
     <p><h1>Bienvenido a Bodega Aqui Sipo</h1>
 
+        
+        <h2>Porfavor ingrese al portal</h2>
+        
+    </p>
+    <div id="ingresoCentrado">
+        <a href="./loginBodeguero.html" >Iniciar sesión</a><br>
+        <p>
+            ¿No tienes una cuenta?  <a href="./registro.html" >Registrar</a> aqui
+        </p>
+=======
         <h2>Por favor ingrese al portal</h2>
         ============
         <a href="./loginBodeguero.html"><h3>Iniciar Sesión</h3> </a><br>
