cambios sitio web

--- a/listaProductos.html
+++ b/listaProductos.html
@@ -3,11 +3,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista Productos</title>
+    <link rel="stylesheet" href="./css/BodegaAquiSipo.css">
 </head>
 <body>
 
-<div>
-
+<div >
+    <form action="./index.html" id="bhome">
+        <input type="submit" value="Inicio" >
+    </form>
+    
     <br> 
     <h3>Seleccione la bodega que desea administrar:</h3>
     <br>
