--- a/registro.html
+++ b/registro.html
@@ -4,10 +4,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>Formulario de registro</title>
+        <link rel="stylesheet" href="./css/BodegaAquiSipo.css">
        
     </head>
 <body>
-     <title>REGISTRARSE</title>
+    <form action="./index.html" id="bhome">
+        <input type="submit" value="Inicio" >
+    </form>
+    <div id="registroBode">
+        <title>REGISTRARSE</title>
         <!--FORMULARIO-->
             <form action="" class="formulario__register">
                 <h2>Registrarse</h2>
@@ -39,6 +44,9 @@
                 <button>Guardar</button>
                 <button>Registrarse</button>
                 </div>
+                <br><br>
+    </div>
+     
 </body>
 
 </html> 
