--- a/registro.html
+++ b/registro.html
@@ -33,7 +33,7 @@
                        <input type="date"
                        id="start"
                        placeholder="Fecha de nacimiento">
-                <p>Teléfono</p>
+                <p>Teléfono:</p>
                        <input type="text"
                        id="telefono"
                        placeholder="Número de teléfono"
