--- a/listaProductos.html
+++ b/listaProductos.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista Productos</title>
+    <link rel="stylesheet" href="./css/BodegaAquiSipo.css">
 </head>
 <body>
 
