cambios de estilo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <link rel="stylesheet" href="./css/BodegaAquiSipo.css">
 </head>
 <body>
+
+    <div class="navbar"> 
+        <div class="logo">
+            <h1>Bodega Aqui Sipo</h1>
+
+        </div>
+
+    </div>
+
     <img  src="./img/bodega.jpg" alt="Bodeguero" width="40%" height="50%" d>
     <div id="TextoBienvenida">
         <p><h1>Bienvenido a Bodega Aqui Sipo</h1>
