--- a/loginBodeguero.html
+++ b/loginBodeguero.html
@@ -6,6 +6,16 @@
     <link rel="stylesheet" href="./css/BodegaAquiSipo.css">
 </head>
 <body>
+
+    <div class="navbar"> 
+        <div class="logo">
+            <h1>Bodega Aqui Sipo</h1>
+
+        </div>
+
+    </div>
+
+    
     <div id="loginUsuario">
         <h1>Login </h1>
         <form action="./listaProductos.html">
