--- a/registro.html
+++ b/registro.html
@@ -8,6 +8,15 @@
        
     </head>
 <body>
+
+    <div class="navbar"> 
+        <div class="logo">
+            <h1>Bodega Aqui Sipo</h1>
+
+        </div>
+
+    </div>
+
     <form action="./index.html" id="bhome">
         <input type="submit" value="Inicio" >
     </form>
