--- a/loginBodeguero.html
+++ b/loginBodeguero.html
@@ -3,7 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Bodeguero</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/BodegaAquiSipo.css">
+    
+
 </head>
 <body>
 
@@ -23,12 +26,12 @@
             <input type="text" id="username" name="usuario"><br>
             <br><label for="pwd">Password:</label><br>
             <input type="password" id="pwd" name="pwd">
-            <br><br><input type="submit" value="Ingresar">
+            <br><br><button type="submit" class="btn btn-success">Ingresar</button>
             
             <br>    
         </form>
         <form action="./index.html" >
-            <input type="submit" value="Volver Inicio" >
+            <button type="submit" class="btn btn-success">Volver Inicio</button>
         </form>
     </div>
 </body>
