--- a/listaProductos.html
+++ b/listaProductos.html
@@ -88,7 +88,9 @@
                 <td>10/12/2020</td>
                 <td>ROPA INTERIOR</td>
                 <td>15</td>
-                <td></td>
+                <td><button class="btn btn-danger">
+                    Borrar
+                  </button></td>
               </tr>
 
               <tr>
@@ -97,7 +99,9 @@
                 <td>10/12/2020</td>
                 <td>ROPA</td>
                 <td>3</td>
-                <td></td>
+                <td><button class="btn btn-danger">
+                    Borrar
+                  </button></td>
               </tr>
             </tbody>
           </table>
