--- a/registro.html
+++ b/registro.html
@@ -25,11 +25,11 @@
         <button type="submit" class="btn btn-success">Volver</button>
     </form>
     <div id="registroBode">
-        <title>REGISTRARSE</title>
+        <br><title>REGISTRARSE</title>
         <!--FORMULARIO-->
         <form action="" class="formulario__register">
-            <h2>Registrarse</h2>
-            <p>Nombre Completo</p>
+            <h2>FORMULARIO DE REGISTRO</h2>
+            </BR><p>Nombre Completo</p>
             <input type="text" id="nombre" placeholder="Ingrese nombre completo" required>
             <p>Correo Electrónico</p>
             <input type="email" id="correo" placeholder="Ingrese su email" required>
