--- a/listaProductos.html
+++ b/listaProductos.html
@@ -1,119 +1,88 @@
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lista Productos</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./css/BodegaAquiSipo.css" />
-  </head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
+        <link rel="stylesheet" href="./css/BodegaAquiSipo.css">
 
-  <body>
+</head>
+
+<body>
+
     <div class="navbar">
-      <div class="logo">
-        <h1>Bodega Aqui Sipo</h1>
-      </div>
-    </div>
-    <br />
-    <div>
-      <div class="container">
-        <div>
-          <form action="./index.html" id="bhome">
-            <button type="submit" class="btn btn-success">Salir</button>
-          </form>
+        <div class="logo">
+            <h1>Bodega Aqui Sipo</h1>
 
-          <br />
-          <h3>Seleccione la bodega que desea administrar:</h3>
-          <br />
-          <input type="radio" name="rdoOpcion" value="1" /> Opción 1<br />
-          <input type="radio" name="rdoOpcion" value="1" /> Opción 2<br />
-          <input type="radio" name="rdoOpcion" value="1" /> Opción 3<br />
-          <input type="radio" name="rdoOpcion" value="1" /> Opción 4<br />
         </div>
 
-        <br />
-
-        <h3>Lista de productos:</h3>
-
-        <br />
-
-        <p>SKU</p>
-        <input type="text" />
-        <button type="button" class="btn btn-success">Filtrar</button>
-        <p>Fecha</p>
-        <input type="date" />
-        <button type="button" class="btn btn-success">Filtrar</button>
-        <p>Stock</p>
-        <input type="number" />
-        <button type="button" class="btn btn-success">Filtrar</button>
-        <br />
-        <br />
-        <div>
-          <button type="button" class="btn btn-success">Agregar</button>
-          <button type="button" class="btn btn-success">Buscar</button>
-          <button type="button" class="btn btn-success">Modificar</button>
-
-          <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">SKU</th>
-                <th scope="col">NOMBRE</th>
-                <th scope="col">FECHA INGRESO</th>
-                <th scope="col">CATEGORIA</th>
-                <th scope="col">CANTIDAD</th>
-                <th scope="col">BORRAR</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">20013558989</th>
-                <td>Zapatillas NIKE</td>
-                <td>10/12/2020</td>
-                <td>CALZADO</td>
-                <td>22</td>
-                <td>
-                  <button class="btn btn-danger">
-                    Borrar
-                  </button>
-                </td>
-              </tr>
-
-              <tr>
-                <th scope="row">20013558989</th>
-                <td>Calzón ETAM</td>
-                <td>10/12/2020</td>
-                <td>ROPA INTERIOR</td>
-                <td>15</td>
-                <td><button class="btn btn-danger">
-                    Borrar
-                  </button></td>
-              </tr>
-
-              <tr>
-                <th scope="row">20013252336</th>
-                <td>Caqueta AMERICANINO</td>
-                <td>10/12/2020</td>
-                <td>ROPA</td>
-                <td>3</td>
-                <td><button class="btn btn-danger">
-                    Borrar
-                  </button></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
     </div>
+    <form action="./index.html" >
+        <button type="submit" class="btn btn-success">Volver Inicio</button>
+    </form>
 
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
-      crossorigin="anonymous"
-    ></script>
-    <script src="index.js"></script>
-  </body>
+    <input type="hidden" id="hfRowIndex" value="" />
+    <table class="table">
+        <tr>
+            <td>SKU</td>
+            <td>
+                <input type="text" name="SKU" id="txtSku" value="1" />
+            </td>
+        </tr>
+        <tr>
+            <td>Nombre</td>
+            <td>
+                <input type="text" name="Nombre" id="txtNombre" value="" />
+            </td>
+        </tr>
+        <tr>
+            <td>Fecha</td>
+            <td>
+                <input type="text" name="Fecha" id="txtFecha" value="" />
+            </td>
+        </tr>
+        <tr>
+        <tr>
+            <td>Cantidad</td>
+            <td>
+                <input type="text" name="Cantidad" id="txtCantidad" value="" />
+            </td>
+        </tr>
+        <tr>
+            <td>Categoria</td>
+            <td>
+                <input type="text" name="Cantidad" id="txtCategoria" value="" />
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <button type='button' id='btnAdd' class="btn btn-success">Agregar</button>
+                <button type='button' id='btnUpdate' style="display: none;" class="btn btn-success">Editar</button>
+            </td>
+            <td>
+                <button type='button' id='btnClear' class="btn btn-success">Limpiar</button>
+            </td>
+        </tr>
+    </table>
+    <table id="tblCrud" class="table">
+        <thead>
+            <tr>
+                <th>SKU</th>
+                <th>Nombre</th>
+                <th>Fecha</th>
+                <th>Cantidad</th>
+                <th>Categoria</th>
+                <th>Editar</th>
+                <th>Eliminar</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="js/crud.js" type="text/javascript">
+    </script>
+</body>
+
 </html>
