cambios color login

--- a/loginBodeguero.html
+++ b/loginBodeguero.html
@@ -19,8 +19,8 @@
     </div>
 
     
-    <div id="loginUsuario">
-        <h1>Login </h1>
+    <br><div class="loginUsuario">
+        <br><h1>Login </h1>
         <form action="./listaProductos.html">
             <label for="usuario">Usuario:</label><br>
             <input type="text" id="username" name="usuario"><br>
