--- a/loginBodeguero.html
+++ b/loginBodeguero.html
@@ -23,9 +23,9 @@
         <br><h1>Login </h1>
         <form action="./listaProductos.html">
             <label for="usuario">Usuario:</label><br>
-            <input type="text" id="username" name="usuario"><br>
+            <input type="text" id="username" name="usuario" placeholder="Ingrese usuario" required><br>
             <br><label for="pwd">Password:</label><br>
-            <input type="password" id="pwd" name="pwd">
+            <input type="password" id="pwd" name="pwd" placeholder="Ingrese usuario" required>
             <br><br><button type="submit" class="btn btn-success">Ingresar</button>
             
             <br>    
