--- a/listaProductos.html
+++ b/listaProductos.html
@@ -18,10 +18,17 @@
 
         </div>
 
-    </div>
-    <form action="./index.html" >
+    </div >
+    <br><form action="./index.html" class="btnInicio" >
         <button type="submit" class="btn btn-success">Volver Inicio</button>
     </form>
+
+    <select name="seleccionBodega" id="slctBo" class="selector">
+      <option value="1">Seleccione una bodega</option>
+      <option value="1">Bodega 1</option>
+      <option value="1">Bodega 2</option>
+      <option value="1">Bodega 3</option>
+    </select>
 
     <input type="hidden" id="hfRowIndex" value="" />
     <table class="table">
