--- a/loginBodeguero.html
+++ b/loginBodeguero.html
@@ -21,11 +21,11 @@
     
     <br><div class="loginUsuario" id="login">
         <br><h1>Login </h1>
-        <form action="./listaProductos.html">
+        <form action="./listaProductos.html" id="mi-login" n>
             <label for="usuario">Usuario:</label><br>
-            <input type="text" id="username" name="usuario" placeholder="Ingrese usuario" required><br>
+            <input type="text" id="username" name="usuario" required placeholder="Ingrese usuario" ><br>
             <br><label for="pwd">Password:</label><br>
-            <input type="password" id="pwd" name="pwd" placeholder="Ingrese usuario" required>
+            <input type="password" id="pwd" name="pwd" required placeholder="Ingrese usuario" >
             <br><br><button type="submit" class="btn btn-success" id="btnIngresar">Ingresar</button>
             
             <br>    
