--- a/loginBodeguero.html
+++ b/loginBodeguero.html
@@ -25,7 +25,7 @@
             <label for="usuario">Usuario:</label><br>
             <input type="text" id="username" name="usuario" required placeholder="Ingrese usuario" ><br>
             <br><label for="pwd">Password:</label><br>
-            <input type="password" id="pwd" name="pwd" required placeholder="Ingrese usuario" >
+            <input type="password" id="pwd" name="pwd" required placeholder="Ingrese usuario" minlength="2" >
             <br><br><button type="submit" class="btn btn-success" id="btnIngresar">Ingresar</button>
             
             <br>    
