--- a/registro.html
+++ b/registro.html
@@ -25,22 +25,26 @@
     <br><form action="./index.html" id="btnhome" class="btnInicio" >
         <button type="submit" class="btn btn-success">Volver</button>
     </form>
-    <div class="registroBode">
+    <div class="registroBode" >
         <br><title>REGISTRARSE</title>
         <!--FORMULARIO-->
         <form action="" class="formulario__register">
             <h2>FORMULARIO DE REGISTRO</h2>
-            <br><p>Nombre Completo</p>
+            <br><p>Nombre Completo:</p>
             <input type="text" id="nombre"  placeholder="Ingrese nombre completo" required><br><br>
-            <p>Correo Electrónico</p>
+            <p>Correo Electrónico:</p>
             <input type="email" id="correo"  placeholder="Ingrese su email" required>
-            <br><br><p>Rut</p>
+            <br><br><p>Rut:</p>
             <input type="text" id="txt_rut"  placeholder="Ingrese su rut. Ej: 12345678-9" required
                 oninput="rutEsValido(this)"><br><br>
-            <p>Fecha de nacimiento</p>
+            <p>Fecha de nacimiento:</p>
             <input type="date" id="start"  placeholder="Fecha de nacimiento"><br><br>
             <p>Teléfono:</p>
-            <input type="text" id="telefono"  placeholder="Número de teléfono" class="input-100" required>
+            <input type="text" id="telefono"  placeholder="Número de teléfono" class="input-100" required><br><br>
+            <p>Ingrese su nueva contraseña, minimo 6 digitos:</p>
+            <input type="password" id="contraseña_registro"  placeholder="Nueva Clave" class="input-100" required minlength="6"><br><br>
+            <p>Reingrese su contraseña:</p>
+            <input type="password" id="contraseña_registro"  placeholder="Nueva Clave" class="input-100" required minlength="6">
             <div class="col-12 col-md-4">
                 <br><br>
                 <div class="button-container">
