--- a/index.html
+++ b/index.html
@@ -34,7 +34,14 @@
 
     </div>
 
-    <br><br>================================================================================================================================================================================================== 
-    
+    <br><br>
+    <div class="separador">
+        ==================================================================================================================================================================================================
+    </div> 
+    <footer>
+        <p>Author: Constanza Tobar, Javiera Caro, Xavier Bonilla </p>
+        <p></p>
+    </footer>
+
 </body>
 </html>
