--- a/loginBodeguero.html
+++ b/loginBodeguero.html
@@ -25,7 +25,7 @@
             <label for="usuario">Usuario:</label><br>
             <input type="text" id="username" name="usuario" required placeholder="Ingrese usuario" ><br>
             <br><label for="pwd">Password:</label><br>
-            <input type="password" id="pwd" name="pwd" required placeholder="Ingrese usuario" minlength="2" >
+            <input type="password" id="pwd" name="pwd" required placeholder="Ingrese contraseña" minlength="6" >
             <br><br><button type="submit" class="btn btn-success" id="btnIngresar">Ingresar</button>
             
             <br>    
@@ -34,5 +34,12 @@
             <button type="submit" class="btn btn-success">Volver Inicio</button>
         </form>
     </div>
+    <br><br><div class="separador">
+        ==================================================================================================================================================================================================
+    </div> 
+    <footer>
+        <p>Author: Constanza Tobar, Javiera Caro, Xavier Bonilla </p>
+        <p></p>
+    </footer>
 </body>
 </html>
