--- a/registro.html
+++ b/registro.html
@@ -48,9 +48,9 @@
             <div class="col-12 col-md-4">
                 <br><br>
                 <div class="button-container">
-                    <button type="submit" class="btn btn-success">Guardar</button>
+                    <button type="submit" class="btn btn-success">Limpiar</button>
                     
-                    <button type="submit" class="btn btn-success">Registrar usuario</button>
+                    <button type="submit" class="btn btn-success">Registrar </button>
                 </div>
             </div>
             <br><br>
