--- a/registro.html
+++ b/registro.html
@@ -40,7 +40,7 @@
             <p>Fecha de nacimiento:</p>
             <input type="date" id="start" required  placeholder="Fecha de nacimiento"><br><br>
             <p>Teléfono:</p>
-            <input type="number" id="telefono" required  placeholder="Número de teléfono" class="input-100" ><br><br>
+            <input type="number" id="telefono" required  placeholder="Número de teléfono" class="input-100" minlength="9" ><br><br>
             <p>Ingrese su nueva contraseña, minimo 6 digitos:</p>
             <input type="password" id="contraseña_registro" required  placeholder="Nueva Clave" class="input-100"  minlength="6"><br><br>
             <p>Reingrese su contraseña:</p>
