--- a/listaProductos.html
+++ b/listaProductos.html
@@ -54,7 +54,7 @@
         <tr>
             <td>Cantidad</td>
             <td>
-                <input type="text" name="Cantidad" id="txtCantidad" value=""  />
+                <input type="number" name="Cantidad" id="txtCantidad" value=""  />
             </td>
         </tr>
         <tr>
@@ -78,7 +78,7 @@
             <td>
                 <button type='button' id='btnClear' class="btn btn-success">Limpiar</button>
             </td>
-            <td>
+            <td >
                 <button type='button' id='btnBuscar' class="btn btn-success">Buscar</button>
             </td>
         </tr>
