edit botones inicio-volver

--- a/buscar.html
+++ b/buscar.html
@@ -25,9 +25,13 @@
     <div>
         <div class="container">
             <div>
+                <form action="./menu.html" id="bhome">
+                    <button type="submit" class="btn btn-success">Volver</button>
+                </form>
                 <form action="./index.html" id="bhome">
                     <button type="submit" class="btn btn-success">Salir</button>
                 </form>
+
 
                 <br />
                 <h3>Seleccione la bodega que desea administrar:</h3>
