--- a/listaProductos.html
+++ b/listaProductos.html
@@ -22,6 +22,9 @@
     <br><form action="./index.html" class="btnInicio" >
         <button type="submit" class="btn btn-success">Volver Inicio</button>
     </form>
+    <form action="./menu.html" id="bhome">
+        <button type="submit" class="btn btn-success">Volver</button>
+    </form>
 
     <select name="seleccionBodega" id="slctBo" class="selector">
       <option value="1">Seleccione una bodega</option>
