--- a/menu.html
+++ b/menu.html
@@ -26,7 +26,7 @@
             <button type="submit" class="btn btn-success">Salir</button>
         </form>
 
-        <form action="./index.html" >
+        <form action="./listaProductos.html" >
             <button type="submit" class="btn btn-success">Ingresar/Modificar Producto</button>
         </form>
         <form action="./buscar.html" >
