--- a/loginBodeguero.html
+++ b/loginBodeguero.html
@@ -21,7 +21,7 @@
     
     <br><div class="loginUsuario" id="login">
         <br><h1>Login </h1>
-        <form action="./menu.html" id="mi-login" n>
+        <form action="./listaProductos.html" id="mi-login" n>
             <label for="usuario">Usuario:</label><br>
             <input type="text" id="username" name="usuario" required placeholder="Ingrese usuario" ><br>
             <br><label for="pwd">Password:</label><br>
